--- a/fpl/static/css/styles.css
+++ b/fpl/static/css/styles.css
@@ -332,22 +332,27 @@ table tbody tr:last-child td {
 
 #difficulty1{
     background-color: green;
+    margin: 2.5px;
 }
 
 #difficulty2{
     background-color: lightgreen;
+    margin: 2.5px;
 }
 
 #difficulty3{
     background-color: palevioletred;
+    margin: 2.5px;
 }
 
 #difficulty4{
     background-color: indianred;
+    margin: 2.5px;
 }
 
 #difficulty5{
     background-color: red;
+    margin: 2.5px;
 }
 /*********************************Help page******************************************/
 .main_help_info img{
