--- a/fpl/templates/formations.html
+++ b/fpl/templates/formations.html
@@ -9,41 +9,36 @@
 			
 
 		<div class="explanation">
-			<h3>This is an Automatic live Program that chooses the best available(Injury free) players to start in your FPL team based on ICT (Influence, Creativity, Threat) and Form for all FPL Formations.It follows all the FPL rules (3 players max from a particular team, budget of £100M, etc).This only picks the starting 11, Use the remaining budget to pick your bench.</h3>
+			<h3>This is an Automated live Script that chooses the best available(Injury free) players to start in your FPL team based on ICT (Influence, Creativity, Threat) and Form for all FPL Formations. It follows all the FPL rules (3 players max from a particular team, budget of £100M, etc). This only picks the starting 11, Use the remaining budget to pick your bench.</h3>
 			
 		</div>
 		</div>
 
-	<hr>
-		<div class="recent-orders">
-				<h2> Formation Summary</h2>
-				<table>
-					<thead>
-						<tr>
-							<th>formation_name<div id='help1'class="help"><span class="formation_name_info">The name of the Formation</span><span class="material-symbols-outlined">help</span></div></th>
-							<th>Team_value<div id='help2' class="help"><span class="team_value_info">The monetary value of the Team  from the live transfer market in £</span><span class="material-symbols-outlined">help</span></div></th>
-							<th> ICT_Form<div id="help3" class="help"><span class="ict_form_info">Statistical index developed specifically to assess a player as an FPL asset, combining Influence, Creativity and Threat scores and Form is a player’s average score per match, calculated from all matches played by his club in the last 30 days.</span><span class="material-symbols-outlined">help</span> </div></th>
-							<th>Remaining Budget<div id="help4" class="help"><span class="budget_info">The money to spend on your bench players</span><span class="material-symbols-outlined">help</span></div></th>
-
-							
-						</tr>
-
-					</thead>
-					<tbody>
-						{%for x in formations %}
-						<tr>
-							<td> {{x['name']}}</td>
-							<td> £{{x['value']}}</td>
-							<td> {{x['ict_form']}}</td>
-							<td> {{x['budget']}}</td>
-							
-						</tr>
-				{% endfor %}
-
-					</tbody>
-				</table>
+	
+	<div class="table">
+		<h3 class="table_head_info">FORMATION SUMMARY</h3>
+		<div class="table-header">
+			<div class="header__item"><a id="wins" class="filter__link filter__link--number" >Formation name<div id='help1'class="help"><span class="formation_name_info">The name of the Formation</span><span class="material-symbols-outlined">help</span></div></a></div>
+			<div class="header__item"><a id="draws" class="filter__link filter__link--number" >Team value<div id='help2' class="help"><span class="team_value_info">The monetary value of the Team  from the live transfer market in £</span><span class="material-symbols-outlined">help</span></div></a></div>
+			<div class="header__item"><a id="losses" class="filter__link filter__link--number" >Ict form<div id="help3" class="help"><span class="ict_form_info">Statistical index developed specifically to assess a player as an FPL asset, combining Influence, Creativity and Threat scores and Form is a player’s average score per match, calculated from all matches played by his club in the last 30 days.</span><span class="material-symbols-outlined">help</span> </div></a></div>
+			<div class="header__item"><a id="total" class="filter__link filter__link--number" >Remaining Budget<div id="help4" class="help"><span class="budget_info">The money to spend on your bench players</span><span class="material-symbols-outlined">help</span></div></a></div>
+			
+			
 		</div>
-		<hr>
+		<div class="table-content">	
+		{% for x in formations%}
+			<div class="table-row">
+				<div class="table-data">{{x['name']}}</div>
+				<div id='{{x['p']}}' class="table-data">{{x['value']}}</div>
+				<div class="table-data">{{x['ict_form']}}</div>
+				<div class="table-data">{{x['budget']}}</div>
+			
+			</div>
+			{% endfor %}
+		</div>	
+	</div>
+	
+		
 <div class="results">
 
 
@@ -439,6 +434,7 @@
 				{% for x in f343['MID'] %}
 				<div class="pos">
 					<img class='img' src="https://resources.premierleague.com/premierleague/photos/players/110x140/p{{ x['photo'] }}">
+					<b><p> {{x['name']}}</p></b>
 				<b><p> Transfer in: {{x['transfer_in_event']}}</p></b>
 				<b><p> Transfer out: {{x['transfer_out_event']}}</p></b>
 				<b><p> Selected by: {{x['selected_by_percent']}}%</p></b>
