--- a/fpl/templates/index.html
+++ b/fpl/templates/index.html
@@ -26,6 +26,7 @@
 				
 				<ul>
 					<li><a href="{{url_for('home')}}">Home</a></li>
+					<li><a href="{{url_for('livescore')}}">Livescore</a></li>
 					<li><a href="{{url_for('formations')}}">Formation Drafts</a></li>
 					<li><a href="{{url_for('news')}}">News</a></li>
 					<li><a href="{{url_for('stats')}}">Stats</a></li>
