--- a/fpl/templates/livescore.html
+++ b/fpl/templates/livescore.html
@@ -34,7 +34,7 @@
 		{%for x in range(0,length) %}
 			<div class="match">
 		<div class="match-header">
-			<div class="match-status">Live</div>
+			<div class="match-status"></div>
 			<div class="match-tournament"><img src="https://assets.codepen.io/285131/pl-logo.svg" />English Premier League</div>
 			<div class="match-actions">
 				<button class="btn-icon"><i class="material-icons-outlined"></i></button>
