--- a/fpl/templates/main.html
+++ b/fpl/templates/main.html
@@ -44,8 +44,8 @@
 		<h3 class="table_head_info">FIXTURE DIFFICULTY</h3>
 		<div class="table-header">
 			<div class="header__item"><a id="draws" class="filter__link filter__link--number" >Team Name</a></div>
-			{% for x in headers %}
-			<div class="header__item"><a id="total" class="filter__link filter__link--number" >GW{{x}} Opponent</a></div>
+			{% for x in range(0,5) %}
+			<div class="header__item"><a id="total" class="filter__link filter__link--number" >Next Opponent</a></div>
 			{% endfor %}
 	
 			
