--- a/fpl/templates/livescore.html
+++ b/fpl/templates/livescore.html
@@ -3,6 +3,7 @@
 <div class="livescore_container">
 		<div class="gameweek_header">
 			<h3>Gameweek {{livescore['game_week']}}</h3>
+			<p>Data automatically refreshes!</p>
 		</div>
 		<!----
 		{%for x in range(0,length) %}
