--- a/fpl/templates/main.html
+++ b/fpl/templates/main.html
@@ -117,10 +117,58 @@
 		</div>	
 	</div>
 
+<div class="table">
+		<h3 class="table_head_info">MOST SELECTED PLAYERS</h3>
+		<div class="table-header">
+			<div class="header__item"><a id="total" class="filter__link filter__link--number" >Ranking</a></div>
+			<div class="header__item"><a id="total" class="filter__link filter__link--number" >Player Name</a></div>
+			<div class="header__item"><a id="draws" class="filter__link filter__link--number" >Team</a></div>
+			<div class="header__item"><a id="total" class="filter__link filter__link--number" >Owned by</a></div>	
+		</div>
 
+		<div class="table-content">	
+		{% for index,x in selected.iterrows() %}
+			<div class="table-row">
+				<div class="table-data">{{index+1}}</div>
+				<div class="table-data">{{x['name']}}</div>
+				<div class="table-data">{{x['team']}}</div>
+				<div class="table-data">{{x['percent']}}% of Managers</div>
+				
+			</div>
+			{% endfor %}
+		</div>	
+	</div>
 
 	
 		
+
+<div class="table">
+		<h3 class="table_head_info">DIFFERENTIALS</h3>
+		<div class="table-header">
+			<div class="header__item"><a id="total" class="filter__link filter__link--number" >Ranking</a></div>
+			<div class="header__item"><a id="total" class="filter__link filter__link--number" >Player Name</a></div>
+			<div class="header__item"><a id="draws" class="filter__link filter__link--number" >Team</a></div>
+			<div class="header__item"><a id="draws" class="filter__link filter__link--number" >Position</a></div>
+			<div class="header__item"><a id="draws" class="filter__link filter__link--number" >Points per game</a></div>
+			<div class="header__item"><a id="draws" class="filter__link filter__link--number" >Price</a></div>
+			<div class="header__item"><a id="total" class="filter__link filter__link--number" >Owned by</a></div>	
+		</div>
+
+		<div class="table-content">	
+		{% for index,x in differentials.iterrows() %}
+			<div class="table-row">
+				<div class="table-data">{{index+1}}</div>
+				<div class="table-data">{{x['name']}}</div>
+				<div class="table-data">{{x['team']}}</div>
+				<div class="table-data">{{x['position']}}</div>
+				<div class="table-data">{{x['points_per_game']}}</div>
+				<div class="table-data">{{x['price']}}</div>
+				<div class="table-data">{{x['selected']}}% of Managers</div>
+				
+			</div>
+			{% endfor %}
+		</div>	
+	</div>
 
 
 
