--- a/fpl/templates/main.html
+++ b/fpl/templates/main.html
@@ -162,7 +162,7 @@
 				<div class="table-data">{{x['team']}}</div>
 				<div class="table-data">{{x['position']}}</div>
 				<div class="table-data">{{x['points_per_game']}}</div>
-				<div class="table-data">{{x['price']}}</div>
+				<div class="table-data">£{{x['price']}}</div>
 				<div class="table-data">{{x['selected']}}% of Managers</div>
 				
 			</div>
