--- a/fpl/static/css/styles.css
+++ b/fpl/static/css/styles.css
@@ -613,7 +613,11 @@ strong {
     font-weight: 600;
 }
 
-
+.game_days{
+    text-align: center;
+    background-color: aqua;
+    
+}
 
 
 .match {
@@ -831,7 +835,7 @@ strong {
 
 
 
-
+/***************************Footer************************************/
 .footer-div{
     margin-top: 50px;
 }
